testsuite/tests/backtrace/tailcall1.native.reference
Fatal error: exception Not_found
Raised at file "tailcall1.ml", line 1, characters 11-26
Called from file "tailcall1.ml", line 11, characters 2-6
